--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 static def getPackageName() {
-    return "org.linphone"
+    return "callture.uc.android"
 }
 
 static def firebaseEnabled() {
@@ -132,7 +132,7 @@ android {
             }
         }
         debug {
-            applicationIdSuffix ".debug"
+            //applicationIdSuffix ".debug"
             debuggable true
             jniDebuggable true
 
@@ -166,7 +166,9 @@ android {
 dependencies {
     compileOnly 'org.jetbrains:annotations:19.0.0'
     if (firebaseEnabled()) {
-        implementation 'com.google.firebase:firebase-messaging:19.0.1'
+        implementation platform('com.google.firebase:firebase-bom:26.0.0')
+        implementation 'com.google.firebase:firebase-messaging'
+        implementation 'com.google.firebase:firebase-analytics'
     }
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
