--- a/app/build.gradle
+++ b/app/build.gradle
@@ -175,6 +175,8 @@ dependencies {
     implementation 'com.google.android:flexbox:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation "org.linphone:linphone-sdk-android:4.5+"
+
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
 if (firebaseEnabled()) {
     apply plugin: 'com.google.gms.google-services'
