--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 static def getPackageName() {
-    return "callture.uc.android"
+    return "callture.linphone.android"
 }
 
 static def firebaseEnabled() {
